# pulse-server

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  schema.sql
pulse-server/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  schema.sql
pulse-server/.github/workflows/: ci.yml
pulse-server/alembic/: env.py  script.py.mako
pulse-server/alembic/versions/: 20260406_000001_initial_schema.py  20260508_000001_containers.py  20260509_000001_sessions_table.py  20260510_000001_add_food_memory_meals_aliases.py  20260518_000001_progress_photo_tags.py  20260519_000001_progress_photo_idempotency.py
pulse-server/scripts/: import_hevy_weights.py  regenerate_progress_thumbs.py
pulse-server/src/diet_tracker_server/: __init__.py  app.py  config.py  macro_aggregates.py  usda.py
pulse-server/src/dietracker_server/: app.py  config.py  db.py  macro_aggregates.py  usda.py
pulse-server/src/nutrition_server/: app.py  config.py  db.py  macro_aggregates.py  quantity.py  usda.py
pulse-server/src/pulse_server/: macro_aggregates.py
pulse-server/tests/: conftest.py  test_app.py  test_auth_google.py  test_auth_middleware.py  test_auth_routes.py  test_auth_sessions.py  test_calories_daily.py  test_config.py  test_container_photos.py  test_containers_api.py  test_db_split.py  test_entries_repository.py  test_food_entry_model.py  test_image_processing.py  test_log_food_service.py  test_mcp_auth.py  test_mcp_tools.py  test_models.py  test_normalize.py  test_progress_photo_api.py  test_quantity.py  test_targets_weight.py  test_usda.py  test_weight_models.py  test_weight_routes.py
pulse-server/tests/integration/: test_aliases.py  test_auth_integration.py  test_containers_repo.py  test_meals_and_memory.py  test_progress_photos_repo.py  test_repositories.py  (+2 more)
(+570 files in other folders)
