[project]
name = "pulse-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "alembic>=1.16",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "fastmcp>=2.7",
    "google-auth>=2.30",
    "requests>=2.32",
    "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: marks tests that require a real PostgreSQL database",
]

# Coverage policy: the unit suite must hold at >= 80% line coverage.
# Run the gate with: uv run pytest tests/ --cov --cov-fail-under=80
# (kept out of default addopts so single-test runs aren't gated.)
[tool.coverage.run]
source = ["src/pulse_server"]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 80
